// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exercise search clause component renders and matches snapshot 1`] = `
<div
  className="search-filter row"
>
  <div
    className="col-8"
  >
    <div
      className="input-group"
    >
      <div
        className="dropdown input-group-prepend"
        onKeyDown={[Function]}
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="dropdown-toggle btn btn-outline-secondary"
          disabled={false}
          id="input-dropdown-addon"
          onClick={[Function]}
          type="button"
        >
          Search by uid
        </button>
      </div>
      <input
        autoFocus={true}
        className="form-control"
        onChange={[Function]}
        onKeyDown={[Function]}
        type="text"
        value=""
      />
      <div
        className="dropdown input-group-append"
        onKeyDown={[Function]}
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="dropdown-toggle btn btn-outline-secondary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          25 per page
        </button>
      </div>
      <div
        className="input-group-append"
      >
        <button
          className="async-button btn btn-primary"
          disabled={false}
          type="button"
        >
          Go
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Exercise search clause component renders and matches snapshot for format filter 1`] = `
<div
  className="search-filter row"
>
  <div
    className="col-8"
  >
    <div
      className="input-group"
    >
      <div
        className="dropdown input-group-prepend"
        onKeyDown={[Function]}
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="dropdown-toggle btn btn-outline-secondary"
          disabled={false}
          id="input-dropdown-addon"
          onClick={[Function]}
          type="button"
        >
          Search by format
        </button>
      </div>
      <div
        className="dropdown"
        onKeyDown={[Function]}
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="dropdown-toggle btn btn-outline-primary"
          disabled={false}
          id="input-dropdown"
          onClick={[Function]}
          type="button"
        >
          Multiple Choice
        </button>
      </div>
      <div
        className="dropdown input-group-append"
        onKeyDown={[Function]}
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="dropdown-toggle btn btn-outline-secondary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          25 per page
        </button>
      </div>
      <div
        className="input-group-append"
      >
        <button
          className="async-button btn btn-primary"
          disabled={false}
          type="button"
        >
          Go
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Exercise search clause component renders and matches snapshot for solutions_are_public filter 1`] = `
<div
  className="search-filter row"
>
  <div
    className="col-8"
  >
    <div
      className="input-group"
    >
      <div
        className="dropdown input-group-prepend"
        onKeyDown={[Function]}
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="dropdown-toggle btn btn-outline-secondary"
          disabled={false}
          id="input-dropdown-addon"
          onClick={[Function]}
          type="button"
        >
          Search by solutions_are_public
        </button>
      </div>
      <div
        className="dropdown"
        onKeyDown={[Function]}
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="dropdown-toggle btn btn-outline-primary"
          disabled={false}
          id="input-dropdown"
          onClick={[Function]}
          type="button"
        >
          True
        </button>
      </div>
      <div
        className="dropdown input-group-append"
        onKeyDown={[Function]}
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="dropdown-toggle btn btn-outline-secondary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          25 per page
        </button>
      </div>
      <div
        className="input-group-append"
      >
        <button
          className="async-button btn btn-primary"
          disabled={false}
          type="button"
        >
          Go
        </button>
      </div>
    </div>
  </div>
</div>
`;
